--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"build-start": "tsc && node dist/index.js",
+		"build-start": "npm run build && npm run start",
 		"watch": "tsc --watch",
 		"deploy-commands": "node dist/deploy-commands.js",
 		"clean": "rm -rd ./dist/"
