--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
-		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"target": "ES2020",
 		"sourceMap": true,
 		"outDir": "dist",
+		"allowSyntheticDefaultImports": true,
+		"sourceType": "module"
 	},
 	"include": ["src/**/*"]
 }
