--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@discordjs/opus": "^0.9.0",
+		"@discordjs/voice": "^0.16.0",
 		"discord.js": "^14.11.0",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"sodium-native": "^4.0.4"
 	}
 }
