--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@discordjs/voice": "^0.16.0",
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.3.1",
-		"sodium-native": "^4.0.4"
+		"sodium-native": "^4.0.4",
+		"ytdl-core": "^4.11.5"
 	}
 }
