--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
 		"target": "ES2020",
 		"sourceMap": true,
 		"outDir": "dist",
+		"strict": true,
+		"strictNullChecks": false,
 	},
 	"include": ["src/**/*"]
 }
