--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
 		"@discordjs/voice": "^0.16.0",
+		"chalk": "^4.1.2",
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.3.1",
 		"sodium-native": "^4.0.4",
